--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,29 @@ build==1.2.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
 colorama==0.4.6
+docutils==0.21.2
 idna==3.7
+importlib_metadata==8.0.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+keyring==25.2.1
 lxml==5.2.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.3.0
+nh3==0.2.17
 packaging==24.1
+pkginfo==1.10.0
+Pygments==2.18.0
 pyproject_hooks==1.1.0
+pywin32-ctypes==0.2.2
+readme_renderer==43.0
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
 soupsieve==2.5
+twine==5.1.1
 urllib3==2.2.2
+zipp==3.19.2
