--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+attrs==23.2.0
 beautifulsoup4==4.12.3
 build==1.2.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
 colorama==0.4.6
 docutils==0.21.2
+frozenlist==1.4.1
 idna==3.7
 importlib_metadata==8.0.0
 jaraco.classes==3.4.0
@@ -14,6 +18,7 @@ lxml==5.2.2
 markdown-it-py==3.0.0
 mdurl==0.1.2
 more-itertools==10.3.0
+multidict==6.0.5
 nh3==0.2.17
 packaging==24.1
 pkginfo==1.10.0
@@ -28,4 +33,5 @@ rich==13.7.1
 soupsieve==2.5
 twine==5.1.1
 urllib3==2.2.2
+yarl==1.9.4
 zipp==3.19.2
