--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "anime_parsers_ru"
-version = "1.9.5"
+version = "1.10.0"
 authors = [
   { name="YaNesyTortiK", email="ya.nesy.tortik.email@gmail.com"},
 ]
@@ -21,7 +21,7 @@ dependencies = [
   "requests>=2.32"
 ]
 license = {file = "LICENSE"}
-keywords = ["anime", "parser", "kodik", "parsing", "aniboom", "animego", "jutsu", "shikimori", "аниме", "парсинг", "кодик", "парсер", "анибум", "анимего", "джутсу", "шикимори"]
+keywords = ["anime", "parser", "kodik", "parsing", "aniboom", "animego", "jutsu", "shikimori", "kodikapi", "аниме", "парсинг", "кодик", "парсер", "анибум", "анимего", "джутсу", "шикимори"]
 
 [project.optional-dependencies]
 async = ["aiohttp>=3.9.5"]
